@@ -1,4 +1,6 @@
-6.jun (la)
+6.jun (ws)
+      - fix #10970: Select All non-functional
+      (la)
       - fix #9107: Pasting multiple multi-voice notes causes crash
       - remove delete button in symboldialog, fix system flag
 4.jun (ws)
